# qdrant-actix

./: Cargo.toml
src/: main.rs
