[package]
name = "qdrant-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.89"
dotenv = "0.15.0"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
thiserror = "1.0.64"
tokio = "1.26.0"
