[package]
name = "qdrant-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.89"
async-trait = "0.1.83"
base64 = "0.22.1"
dotenv = "0.15.0"
futures = "0.3.31"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
thiserror = "1.0.64"
tokio = "1.26.0"
